codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__agents_navigation_enabled.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5348
expression: terminal.backend()
---
"│                                                                               "
"› Ask Elpis to do anything                                                      "
"│                                                                               "
"│                                                                               "
"│                                                                               "
"│                                                                               "
"│                                                                               "
"│                                                                               "
"  ← for agents · ? for shortcuts        100% context left · Tab Context Ledger  "
