codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__empty.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 9367
expression: terminal.backend()
---
"│                                                                                                   "
"› Ask Elpis to do anything                                                                          "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"  ? for shortcuts                                           100% context left · Tab Context Ledger  "
