codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__file_popup_ignores_unbindable_qualified_skill.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5348
expression: terminal.backend()
---
"                                                                                                    "
"  loading...                                                                                        "
"                                                                                                    "
"│                                                                                                   "
"› @src  $1plugin:d                                                                                  "
"│                                                                                                   "
"│                                                                                                   "
"│                                                                                                   "
"                                                            100% context left · Tab Context Ledger  "
